--- a/index.html
+++ b/index.html
@@ -24,6 +24,31 @@
 
         </nav>
     </div>
+    <div id="card-area">
+        <div class="card-container">
+            <div class="choice bible">
+                <div>BIBLE</div>
+            </div>
+            <div class="card">
+                <div class="top-half">
+                    <div>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores cupiditate
+                        ipsum,
+                        natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia quis
+                        suscipit eum nostrum nihil.
+                    </div>
+
+                </div>
+                <div class="bottom-half">
+
+                </div>
+            </div>
+            <div class="choice blasphemy">
+                <div>BLASPHEMY</div>
+            </div>
+        </div>
+    </div>
+    </div>
 
 
 </body>
