changed up the card style and removed nav bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div id="main-grid">
+    <!-- <div id="main-grid">
         <nav id="nav-bar">
             <div class="nav-link current-nav" id="home">
                 <div class="nav-text">HOME</div>
@@ -23,24 +23,18 @@
             </div>
 
         </nav>
-    </div>
+    </div> -->
     <div id="card-area">
         <div class="card-container">
             <div class="choice bible">
                 <div>BIBLE</div>
             </div>
             <div class="card">
-                <div class="top-half">
-                    <div>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores cupiditate
-                        ipsum,
-                        natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia quis
-                        suscipit eum nostrum nihil.
-                    </div>
-
-                </div>
-                <div class="bottom-half">
-
+                <div>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores cupiditate
+                    ipsum,
+                    natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia quis
+                    suscipit eum nostrum nihil.
                 </div>
             </div>
             <div class="choice blasphemy">
