removed the padding and margin from the body

--- a/index.html
+++ b/index.html
@@ -13,35 +13,28 @@
 </head>
 
 <body>
-    <!-- <div id="main-grid">
-        <nav id="nav-bar">
-            <div class="nav-link current-nav" id="home">
-                <div class="nav-text">HOME</div>
-            </div>
-            <div class="nav-link" id="other">
-                <div class="nav-text">OTHER_OPTIONS</div>
-            </div>
-
-        </nav>
-    </div> -->
-    <div id="card-area">
-        <div class="card-container">
-            <div class="choice bible">
-                <div>BIBLE</div>
-            </div>
-            <div class="card">
-                <div>
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores cupiditate
-                    ipsum,
-                    natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia quis
-                    suscipit eum nostrum nihil.
+    <div id="area-wrapper">
+        <div id="card-area">
+            <div class="card-container">
+                <div class="choice bible">
+                    <div>BIBLE</div>
+                </div>
+                <div class="card">
+                    <div>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores cupiditate
+                        ipsum,
+                        natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia quis
+                        suscipit eum nostrum nihil.
+                    </div>
+                </div>
+                <div class="choice blasphemy">
+                    <div>BLASPHEMY</div>
                 </div>
             </div>
-            <div class="choice blasphemy">
-                <div>BLASPHEMY</div>
-            </div>
         </div>
+
     </div>
+
     </div>
 
 
