--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script defer src="js/main.js"></script>
 
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Bible or Blasphemy</title>
 </head>
