The cards can now flip over revealing a backside upon hovering. Javascript can update the face of the card based on a Datum class.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <script src="js/jquery-3.6.0.slim.min.js"></script>
+    <script defer src="https://apis.google.com/js/api.js"></script>
     <script defer src="js/main.js"></script>
 
     <meta charset="utf-8">
@@ -21,11 +22,17 @@
                     <div>BIBLE</div>
                 </div>
                 <div class="card">
-                    <div>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores cupiditate
-                        ipsum,
-                        natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia quis
-                        suscipit eum nostrum nihil.
+                    <div class="card-wrapper">
+                        <div class="card-front">
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores cupiditate
+                            ipsum,
+                            natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia quis
+                            suscipit eum nostrum nihil.
+                        </div>
+                        <div class="card-back">
+                            Wrong LMAO
+                        </div>
+
                     </div>
                 </div>
                 <div class="choice blasphemy">
