You can now play the game with one card.

--- a/index.html
+++ b/index.html
@@ -24,13 +24,18 @@
                 <div class="card">
                     <div class="card-wrapper">
                         <div class="card-front">
-                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores cupiditate
+                            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias recusandae maiores
+                            cupiditate
                             ipsum,
-                            natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia quis
+                            natus nisi laboriosam repellendus, sapiente sint iure dicta iusto? Iste, veniam mollitia
+                            quis
                             suscipit eum nostrum nihil.
                         </div>
                         <div class="card-back">
-                            Wrong LMAO
+                            <h1>Wrong!</h1>
+                            <p id="explanation"></p>
+                            <p id="source"></p>
+                            <p id="context"></p>
                         </div>
 
                     </div>
