Working out the google sheets API. sheets.js can populate an array with Datum objects upon calling httpGetAsync(myURL, parseText)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="js/jquery-3.6.0.slim.min.js"></script>
     <script defer src="https://apis.google.com/js/api.js"></script>
     <script defer src="js/main.js"></script>
+    <script defer src="js/sheets.js"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
