--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="js/jquery-3.6.0.slim.min.js"></script>
     <script src="https://unpkg.com/xstate@4/dist/xstate.js"></script>
-    <script src="js/devapi.js"></script>
     <script src="js/sheets.js"></script>
     <script defer src="js/main.js"></script>
 
@@ -25,6 +24,7 @@
                 <div class="card">
                     <div id="card-wrapper">
                         <div class="card-front">
+                            <div class="front-content"></div>
                         </div>
                         <div class="card-back">
                             <div id="back-title" class="back-div"></div>
@@ -39,6 +39,7 @@
                     <div>BLASPHEMY</div>
                 </div>
             </div>
+            <div class="score">SCORE:   <span id="the-score"></span></div>
         </div>
 
     </div>
