--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                     <div id="card-wrapper">
                         <div class="card-front">
                             <div class="front-content"></div>
+                            <div class="scrollfix"> </div>
                         </div>
                         <div class="card-back">
                             <div id="back-title" class="back-div"></div>
-                            <!-- <div id="explanation" class="back-div"></div> -->
                             <div id="source" class="back-div"></div>
                             <div id="context" class="back-div"></div>
                         </div>
